Fixed some spacing

--- a/public/css/larger.scss
+++ b/public/css/larger.scss
@@ -240,7 +240,7 @@
   }
 
   #card6_project, #card5_skills, #card2_contact, #card5_project{
-    margin-bottom: 20px;
+    margin-bottom: 40px;
   }
   
   #dropDown {
@@ -373,7 +373,7 @@
   }
 
   .row{
-    margin-top: 10px;
+    margin-top: 0px;
   }
 
   .row_home{
@@ -404,7 +404,7 @@
     grid-template-rows: 40px 1fr 40px 1fr 40px 1fr 40px;
   }
 
-  #card6_project, #card5skills, #card2_contact, #card5_project{
+  #card6_project, #card5_skills, #card2_contact, #card5_project{
     margin-bottom: 0px;
   }
 
